--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Charli Hiers</h1>
+        <h2>Sophomore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a Sophomore at Bob Jones University studying sport management. I work for the Davis Field House
+             as a scorekeeper for Bruins volleyball, basketball, and soccer.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
+            I attend Grace Baptist Fellowship in Greenville SC. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            <a href="mailto:chier559@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening going to the gym, playing sports, and surfing.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Sport Management<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
