--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ h3 {
             <a href="mailto:chier559@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening going to the gym, playing sports, and surfing.
+            I love going to the gym, playing sports, and surfing.
          </p>
-        <h3>EDUCATION</h3>
+        <h3>School of Health Professions</h3>
         Sport Management<br />
         Bob Jones University<br />
         Example image:
