--- a/index.html
+++ b/index.html
@@ -1,53 +1,62 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<style>
-body {
-    background: lightgreen;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
-<body>
-    <div id="content">
-        <h1>Charli Hiers</h1>
-        <h2>Sophomore in Greenville, South Carolina</h2>
-        
-         <p>I am a Sophomore at Bob Jones University studying sport management. I work for the Davis Field House
-             as a scorekeeper for Bruins volleyball, basketball, and soccer.</p>
-         <p>
-            I attend Grace Baptist Fellowship in Greenville SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:chier559@students.bju.edu">here</a>.
-         </p> 
-         <p>
-            I love going to the gym, playing sports, and surfing.
-         </p>
-        <h3>School of Health Professions</h3>
-        Sport Management<br />
-        Bob Jones University<br />
-        Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
-    </div>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - My Sports Business</title>
+    <meta name="description" content="A sports business agency that helps connect athletes, coaches, agents, or anyone interested in the sports world. We provide 1-on-1 coaching, group training sessions (basketball, volleyball, soccer, baseball), and coaching and business classes for those wanting to pursue a career in the sports industry.">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
+</head>
+
+<body style="background:linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/bg.jpg');">
+    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3">The Sports Industry</span><span class="site-heading-lower">Elite SPort Careers</span></h1>
+    <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
+        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">My Sports Business</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="store.html">Store</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
+    <section class="page-section clearfix">
+        <div class="container">
+            <div class="intro"></div>
+        </div>
+    </section>
+    <section class="page-section cta">
+        <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
+            <h2 class="section-heading mb-4"><span class="section-heading-upper">Pursue an</span><span class="section-heading-lower">elite career</span></h2>
+            <p class="mb-3">Become a certified coach or personal trainer through our Elite Coaches program. We also offer sport business classes such as sports marketing, sports finance, sport facilities management, and even social media in sports.</p>
+            <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="#">Visit Us Today!</a></div>
+        </div><img src="assets/img/women%20training%20picture.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <div class="cta-inner text-center rounded">
+                        <h2 class="section-heading mb-4"><span class="section-heading-upper">Our Promise</span><span class="section-heading-lower">To You</span></h2>
+                        <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied,
+                            please let us know and we will do whatever we can to make things right!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer text-faded text-center py-5">
+        <div class="container">
+            <p class="m-0 small">Copyright&nbsp;©&nbsp;My Sports Business 2024</p>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/current-day.js"></script>
 </body>
+
 </html>
